--- a/Assignment/Assignment-1.ipynb
+++ b/Assignment/Assignment-1.ipynb
@@ -1,6 +1,103 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "67ee68e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: numpy in /home/anthony/dev/la_study_de_linear_regression/.venv/lib/python3.12/site-packages (2.4.2)\n",
+      "Requirement already satisfied: pandas in /home/anthony/dev/la_study_de_linear_regression/.venv/lib/python3.12/site-packages (3.0.0)\n",
+      "Requirement already satisfied: matplotlib in /home/anthony/dev/la_study_de_linear_regression/.venv/lib/python3.12/site-packages (3.10.8)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /home/anthony/dev/la_study_de_linear_regression/.venv/lib/python3.12/site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /home/anthony/dev/la_study_de_linear_regression/.venv/lib/python3.12/site-packages (from matplotlib) (1.3.3)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/anthony/dev/la_study_de_linear_regression/.venv/lib/python3.12/site-packages (from matplotlib) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /home/anthony/dev/la_study_de_linear_regression/.venv/lib/python3.12/site-packages (from matplotlib) (4.61.1)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in /home/anthony/dev/la_study_de_linear_regression/.venv/lib/python3.12/site-packages (from matplotlib) (1.4.9)\n",
+      "Requirement already satisfied: packaging>=20.0 in /home/anthony/dev/la_study_de_linear_regression/.venv/lib/python3.12/site-packages (from matplotlib) (26.0)\n",
+      "Requirement already satisfied: pillow>=8 in /home/anthony/dev/la_study_de_linear_regression/.venv/lib/python3.12/site-packages (from matplotlib) (12.1.0)\n",
+      "Requirement already satisfied: pyparsing>=3 in /home/anthony/dev/la_study_de_linear_regression/.venv/lib/python3.12/site-packages (from matplotlib) (3.3.2)\n",
+      "Requirement already satisfied: six>=1.5 in /home/anthony/dev/la_study_de_linear_regression/.venv/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install numpy pandas matplotlib\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "62f94a01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Unnamed: 0        Stu_ID  Atten_Percent  Assig_Sc  Mid_Sc  Final_Sc  \\\n",
+      "0              0  STU202400001          85.93     60.76   70.91     70.90   \n",
+      "1              1  STU202400002          83.58     51.84   75.81     71.52   \n",
+      "2              2  STU202400003          81.84     41.83   38.96     52.38   \n",
+      "3              3  STU202400004          72.28     81.50   83.56     80.49   \n",
+      "4              4  STU202400005          97.48     64.11   84.47     62.98   \n",
+      "...          ...           ...            ...       ...     ...       ...   \n",
+      "1495        1495  STU202401496          94.90     40.49   32.43     36.91   \n",
+      "1496        1496  STU202401497          60.00     57.23   71.07     59.59   \n",
+      "1497        1497  STU202401498          76.03     86.36   60.64     57.13   \n",
+      "1498        1498  STU202401499          76.02     69.87   42.08     55.47   \n",
+      "1499        1499  STU202401500          90.06     60.17   38.87      8.06   \n",
+      "\n",
+      "      Proj_Sc  Parti_Sc  Overall_Sc Status  \n",
+      "0       72.88     72.84       68.86   Pass  \n",
+      "1       78.06     80.04       69.29   Pass  \n",
+      "2       61.85     71.51       50.39   Pass  \n",
+      "3       66.04     76.75       78.81   Pass  \n",
+      "4       75.97     88.76       72.09   Pass  \n",
+      "...       ...       ...         ...    ...  \n",
+      "1495    42.20     79.73       41.98   Fail  \n",
+      "1496    83.29     67.26       65.62   Pass  \n",
+      "1497    79.88     68.55       69.69   Pass  \n",
+      "1498    64.54     58.11       58.02   Pass  \n",
+      "1499   100.00     76.10       47.84   Pass  \n",
+      "\n",
+      "[1500 rows x 10 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data=pd.read_csv(\"../assets/Student_Performance.csv\")\n",
+    "print(data.head(1500))"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": ".venv (3.12.3)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
